kubernetes-namespace.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: bot-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodonbot
  template:
    metadata:
      labels:
        app: mastodonbot
    spec:
      containers:
      - name: mastodonbot-c
        image: localhost:32000/mastodonbot
      - name: redis-c
        image: redis
        command: ["redis-server"] 
        args: ["--save", "60", "1", "--loglevel", "warning"]
        volumeMounts:
        - name: cache-vol
          mountPath: /data
      volumes:
      - name: cache-vol
        persistentVolumeClaim:
          claimName: cache-pvc
