app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file compose.yaml convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "8008"
      port: 8008
      targetPort: 8008
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
